# mems

./: .gitignore  CMakeLists.txt  README.md  build-windows.bat  build.sh  buildem-windows.bat  buildem.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js  main.scss
frontend/src/components/: Content.js  DeviceStats.js  NavigationBar.css  NavigationBar.js  ProcHandler.js
frontend/src/components/cards/: MemViewer.js  ProcHandler.css  ProcHandler.js
frontend/src/socket/: SocketHandler.js
public/: index.html  package-lock.json
src/: logger.h  memhandler.cpp  memhandler.h  memory.cpp  memory.h  prochandler.cpp  prochandler.h  scanner.cpp  scanner.h  syshandler.cpp  syshandler.h
src/includes/mongoose/: mongoose.h
